@@ -1219,6 +1219,14 @@ dd.image-caption {
 
 /* @group Forms */
 
+fieldset,
+.editionComment {
+    line-height:1.5em;
+    margin:1em 0;
+    padding:0 1em 1em;
+    width:auto;
+}
+
 /* Emulates the styling from the h1 tag */
 #archetypes-fieldname-title input {
 	font-family: "Helvetica Neue", Arial, FreeSans, sans-serif; 
